--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mayur",
   "license": "ISC",
   "dependencies": {
     "expess": "^0.0.1-security",
     "express": "^4.18.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mayur68/WebApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Mayur68/WebApp/issues"
+  },
+  "homepage": "https://github.com/Mayur68/WebApp#readme"
 }
