--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mayur",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
