--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.9",
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "socket.io": "^4.6.2"
   },
   "repository": {
     "type": "git",
