--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   },
   "repository": {
