--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "webapp",
   "version": "1.0.0",
@@ -28,3 +29,11 @@
   },
   "homepage": "https://github.com/Mayur68/WebApp#readme"
 }
+
+
+"scripts": {
+"start": "nodemon index",
+"build": "npm install && npm run build-server",
+"build-server": "echo 'Building server...' && npm run compile-server",
+"compile-server": "echo 'Compiling server...'"
+},
