--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "Simple WebApp",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+"start": "nodemon index",
+"build": "npm install && npm run build-server",
+"build-server": "echo 'Building server...' && npm run compile-server",
+"compile-server": "echo 'Compiling server...'"
   },
   "keywords": [],
   "author": "Mayur",
@@ -29,11 +34,3 @@
   },
   "homepage": "https://github.com/Mayur68/WebApp#readme"
 }
-
-
-"scripts": {
-"start": "nodemon index",
-"build": "npm install && npm run build-server",
-"build-server": "echo 'Building server...' && npm run compile-server",
-"compile-server": "echo 'Compiling server...'"
-},
