--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webapp",
+  "name": "WebApp",
   "version": "1.0.0",
-  "description": "Simple WebApp",
+  "description": "Simple BtiBliss",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/Mayur68/WebApp/issues"
   },
-  "homepage": "https://github.com/Mayur68/WebApp#readme"
+  "homepage": "https://github.com/Mayur68/WebApp#readme",
+  "devDependencies": {}
 }
