--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
     "mongodb": "^5.9.0",
+    "mongoose": "^7.6.3",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
