--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.9.0",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
