--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "supertest": "^6.3.3"
   },
   "repository": {
     "type": "git",
@@ -32,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/Mayur68/WebApp/issues"
   },
-  "homepage": "https://github.com/Mayur68/WebApp#readme"
+  "homepage": "https://github.com/Mayur68/WebApp#readme",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
