--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Mayur",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "expess": "^0.0.1-security",
