--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "supertest": "^6.3.3"
   },
   "repository": {
