--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "Mayur",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
-    "mongodb": "^5.9.0",
+    "jszip": "^3.10.1",
+    "mongodb": "^5.9.1",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
